--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -1040,6 +1040,18 @@ h6 {
   color: rgb(74, 74, 74);
 }
 
+.form-personal__map-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 500px;
+  width: 100%;
+}
+
+.form-personal__map {
+  width: 100%;
+}
+
 .form__error {
   color: rgb(207, 51, 57);
 }
